# apachecn-algo-zh

plane-pm/: .gitignore  README.md  docker-compose.override.yml
plane-pm/bridge/: .env.example  Dockerfile  pyproject.toml
plane-pm/bridge/app/: __init__.py  config.py  db.py  main.py  models.py  queue.py  security.py
plane-pm/bridge/app/clients/: _http.py  gitlab.py  plane.py
plane-pm/bridge/app/routers/: admin.py  gitlab_webhook.py  health.py  plane_webhook.py
plane-pm/bridge/app/sync/: dedupe.py  engine.py  issues.py  mappings.py  merge_requests.py
plane-pm/bridge/config/: projects.yml
plane-pm/bridge/tests/: conftest.py  test_config.py  test_dedupe.py  test_merge_requests.py
